--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -490,6 +490,7 @@ form {
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 
   &::before {
     content: "";
